# info_protection_course

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  driver.py  main.cc  main.py
.github/workflows/: cmake.yml
cmake/: clang_format.cmake  comp_flags.cmake  upd_tar_list.cmake
include/algorithms/: crc32.hh  keccak.hh  md5.hh  sha1.hh  sha256.hh  sha3.hh
quantum_cryptography/: quantum_cryptography.tex
quantum_cryptography/include/: preambule.tex  title.tex
quantum_cryptography/tables/: bb84_exmpl1.tex  bb84_exmpl2.tex  bb84_ref.tex
scripts/: birthday.py  driver.py  gen.py  plot.py
sha_lab/cmake/: list_dirs.cmake
sha_lab/docs/: CMakeLists.txt
sha_lab/include/algorithms/: crc32.hh  md5.hh  sha256.hh
sha_lab/include/timer/: timer.hh
sha_lab/scripts/: birthday.py
sha_lab/src/: CMakeLists.txt
sha_lab/src/algorithms/: CMakeLists.txt  sha256.cc
sha_lab/test/unit/: CMakeLists.txt  test_header.hh
sha_lab/test/unit/algorithms/: CMakeLists.txt  crc32.cc  md5.cc  sha1.cc
sha_lab/test/unit/example/: CMakeLists.txt  example.cc
sha_lab/tools/: CMakeLists.txt
sha_lab/tools/driver/: CMakeLists.txt  driver.hh
src/: CMakeLists.txt
src/algorithms/: CMakeLists.txt  crc32.cc  hmac.h  keccak.cc  md5.cc  sha1.cc  sha256.cc  sha3.cc
test/unit/: test_footer.hh
test/unit/algorithms/: CMakeLists.txt  crc32.cc  keccak.cc  md5.cc  sha1.cc  sha256.cc  sha3.cc
tools/driver/: driver.cc  driver.hh
